[gd_scene load_steps=7 format=1]

[ext_resource path="res://mainmenu.gd" type="Script" id=1]
[ext_resource path="res://shaders/colorfader.tres" type="Shader" id=2]
[ext_resource path="res://fonts/Monoton-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/buttons.tres" type="DynamicFont" id=4]

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = ExtResource( 2 )
shader/shading_mode = 0

[sub_resource type="DynamicFont" id=1]

font/size = 150
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[node name="MainMenu" type="Control"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 1024.0
script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

material/material = SubResource( 2 )
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -25.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 1 )
text = "throwback"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="1PGame" type="Button" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 300.0
margin/right = 350.0
margin/bottom = 400.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "1  PLAYER"
flat = false

[node name="2PGame" type="Button" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 450.0
margin/right = 400.0
margin/bottom = 550.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "2  PLAYERS"
flat = false

[node name="Settings" type="Button" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 450.0
margin/top = 600.0
margin/right = 450.0
margin/bottom = 700.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "SETTINGS"
flat = false

[node name="Exit" type="Button" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 750.0
margin/right = 500.0
margin/bottom = 850.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "EXIT"
flat = false

[connection signal="pressed" from="1PGame" to="." method="_on_1PGame_pressed"]

[connection signal="pressed" from="2PGame" to="." method="_on_2PGame_pressed"]

[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]


